# Python-Shopify-REST

./: LICENSE  README.md  pyproject.toml
src/Shopify-REST/: Shop.py
